--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,12 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+HaltonSequences = "13907d55-377f-55d6-a9d6-25ac19e11b95"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
