full working experiment pipeline

--- a/Project.toml
+++ b/Project.toml
@@ -4,19 +4,23 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+FluxOptTools = "ca11d760-9bce-11e9-0b7e-4f72fcadb4f9"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HaltonSequences = "13907d55-377f-55d6-a9d6-25ac19e11b95"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Quadrature = "67601950-bd08-11e9-3c89-fd23fb4432d2"
 QuasiMonteCarlo = "8a4e6c94-4038-4cdc-81c3-7e6ffdb2a71b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
